# bizcate_model

./: .gitignore  a002_q23bodies.py  a003_q23spend.py  a018_avgspend_bm.py  a019_avgspend_ecom.py  a036_037_awareness.py  a043_046_marketshare.py  a050_byretailer_omnibase_bmroc.py  a050_byretailer_omnibase_ecomroc.py  a099_q42research_purpose_bm.py  a100_q42research_purpose_ecom.py  a118_q40trip.py  calculate_correlation_matrix_bizcate.py  callbacks.py  checks.py  db.py  kf_modules.py  pyproject.toml  skwrapper.py  temp.py  temp2.py  utils.py
